--- a/assets/css/theme/candidate.scss
+++ b/assets/css/theme/candidate.scss
@@ -422,6 +422,16 @@
       }
     }
   }
+  .hidden-text {
+    width: 230px;
+    color: $color-orange;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    &:after {
+      background: $color-orange;
+    }
+  }
 }
 
 .theme-candidate {
