--- a/assets/css/theme/umana.scss
+++ b/assets/css/theme/umana.scss
@@ -337,4 +337,14 @@
       }
     }
   }
+  .hidden-text {
+    width: 230px;
+    color: $color-blue;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    &:after {
+      background: $color-blue;
+    }
+  }
 }
