--- a/assets/css/theme/company.scss
+++ b/assets/css/theme/company.scss
@@ -6,7 +6,9 @@
   .app--header.umana__header.is-login {
     background: $bg-green;
   }
-  .app--contents.umana.is-login {
+  .app--contents.umana.is-login,
+  .app--contents.is-login,
+  .umana-content-page {
     background: $bg-green;
   }
   input:-webkit-autofill,
@@ -25,11 +27,7 @@
   }
   //titles
   h2,
-  .ant-steps.ant-steps-horizontal
-    .ant-steps-item.ant-steps-item-process
-    .ant-steps-item-container
-    .ant-steps-item-content
-    .ant-steps-item-title {
+  .ant-steps.ant-steps-horizontal .ant-steps-item.ant-steps-item-process .ant-steps-item-container .ant-steps-item-content .ant-steps-item-title {
     color: $color-green !important;
   }
   // themes
