--- a/assets/css/theme/umana.scss
+++ b/assets/css/theme/umana.scss
@@ -5,7 +5,8 @@
   .app--header.umana__header.is-login {
     background: $bg-blue;
   }
-  .app--contents.umana.is-login {
+  .app--contents.is-login,
+  .umana-content-page {
     background: $bg-blue;
   }
   //titles
