--- a/assets/css/element/_form.scss
+++ b/assets/css/element/_form.scss
@@ -224,6 +224,8 @@ label {
 .umana-form--footer {
   padding: 10px 0 0;
   width: 100%;
+  display: flex;
+  justify-content: flex-end;
   &.columns {
     display: flex;
     .ant-btn {
