--- a/assets/css/shared/structure.scss
+++ b/assets/css/shared/structure.scss
@@ -430,3 +430,43 @@
   bottom: 0;
   background: $bg-blue !important;
 }
+
+.app.umana-loader {
+  width: 100%;
+  height: 100vh !important;
+  min-height: 100vh !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .app--spinner.animated.fadeIn {
+    width: 100% !important;
+    min-height: 100vh !important;
+    height: 100vh !important;
+    display: flex;
+    flex-direction: column;
+    position: fixed !important;
+    top: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    .ant-spin.ant-spin-lg.ant-spin-spinning.ant-spin-show-text {
+      color: $color-text;
+      display: flex;
+      flex-direction: column;
+      width: 200px;
+      justify-content: center;
+      align-items: center;
+      .ant-spin-dot.ant-spin-dot-spin {
+        .ant-spin-dot-item {
+          background: $color-blue;
+        }
+      }
+      .ant-spin-text {
+        padding: 10px;
+        color: $color-blue;
+        font-size: 18px;
+        background: rgba($color-white, 0.5);
+      }
+    }
+  }
+}
