--- a/assets/css/element/_buttons.scss
+++ b/assets/css/element/_buttons.scss
@@ -182,6 +182,13 @@
         font-size: 40px;
       }
     }
+    i {
+      line-height: 60px;
+      @include bp(xmedium) {
+        line-height: 80px;
+      }
+    }
+
     &.ant-btn-sm {
       width: 35px;
       height: 35px;
@@ -193,6 +200,12 @@
         height: 50px;
         min-width: 50px;
         min-height: 50px;
+      }
+      i {
+        line-height: 35px;
+        @include bp(xmedium) {
+          line-height: 50px;
+        }
       }
       .anticon {
         color: $color-blue;
