UPDATE Fix safari

--- a/assets/css/shared/structure.scss
+++ b/assets/css/shared/structure.scss
@@ -470,3 +470,11 @@
     }
   }
 }
+
+.umana-element__add {
+  .ant-btn.ant-btn-primary.ant-btn-circle.ant-btn-lg.ant-btn-icon-only.ant-btn-background-ghost.circle-fixed {
+    i {
+      line-height: 50px;
+    }
+  }
+}
