--- a/assets/css/shared/structure.scss
+++ b/assets/css/shared/structure.scss
@@ -428,7 +428,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: $bg-blue !important;
+  background: rgba($color-white, 0.3) !important;
 }
 
 .app.umana-loader {
