--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -23,6 +23,7 @@
 @import './element/avatar';
 @import './element/sitebar';
 @import './element/steps';
+@import './element/table';
 
 // #Pages
 @import './pages/home/home';
