--- a/assets/css/element/_sitebar.scss
+++ b/assets/css/element/_sitebar.scss
@@ -1,6 +1,7 @@
 .umana-sitebar {
   padding-right: 20px;
   position: relative;
+  width: 350px;
   max-width: 350px;
   margin-bottom: 20px;
   position: sticky;
