--- a/assets/css/_structure.scss
+++ b/assets/css/_structure.scss
@@ -77,7 +77,6 @@ h5 {
   }
 
   &--contents {
-    padding-top: 30px;
     padding-bottom: 0px;
     background-color: #ffffff;
   }
@@ -301,7 +300,7 @@ h5 {
     padding: 30px 20px;
     width: 100%;
     @include bp(xmedium) {
-      width: 66%;
+      width: calc(100% - 370px);
       &.big {
         width: calc(100% - 400px);
         margin-left: auto;
@@ -317,10 +316,12 @@ h5 {
       box-shadow: none;
     }
   }
+
   @include element(small) {
     width: 100%;
     @include bp(xmedium) {
-      width: 33%;
+      width: 350px;
+      margin-right: 20px;
     }
     &.bg-white {
       background: $color-white;
@@ -330,6 +331,7 @@ h5 {
       top: 200px;
     }
   }
+
   @include element(medium) {
     width: 50%;
     &.bg-white {
