--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -24,6 +24,7 @@
 @import './element/sitebar';
 @import './element/steps';
 @import './element/table';
+@import './element/emptyLayout';
 
 // #Pages
 @import './pages/home/home';
