--- a/assets/css/element/_form.scss
+++ b/assets/css/element/_form.scss
@@ -2,7 +2,6 @@
 
 .umana-form--section {
   width: 100%;
-  padding: 30px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -11,6 +10,18 @@
   margin-bottom: 30px;
   background: $color-white;
   box-shadow: $shadow;
+  padding: 30px 10px;
+  @include bp(xmedium) {
+    padding: 30px 20px;
+  }
+  @include bp(large) {
+    padding: 30px 40px;
+  }
+  h1,
+  h2,
+  h3 {
+    margin: 0 10px 20px;
+  }
   &.simple-form {
     background: transparent;
     box-shadow: none;
@@ -123,7 +134,6 @@ form.ant-form.ant-form-horizontal {
   }
   .umana-form--section {
     width: 100%;
-    padding: 30px;
     background: $color-white;
     box-shadow: $shadow;
     display: flex;
@@ -132,6 +142,18 @@ form.ant-form.ant-form-horizontal {
     justify-content: space-between;
     font-family: $font-primary;
     margin-bottom: 30px;
+    padding: 30px 10px;
+    @include bp(xmedium) {
+      padding: 30px 20px;
+    }
+    @include bp(large) {
+      padding: 30px 40px;
+    }
+    h1,
+    h2,
+    h3 {
+      margin: 0 10px 20px !important;
+    }
     & > .umana-form--group {
       &:first-child {
         padding-top: 0;
@@ -232,6 +254,10 @@ label {
       margin: 10px;
     }
   }
+}
+
+.ant-row.ant-form-item {
+  overflow: hidden;
 }
 
 // space
