--- a/assets/css/element/_modale.scss
+++ b/assets/css/element/_modale.scss
@@ -103,6 +103,8 @@
   .ant-modal-confirm-btns {
     display: flex;
     justify-content: flex-end;
+    flex-wrap: wrap;
+
     .ant-btn {
       width: 200px;
       height: 50px;
