--- a/assets/css/element/_sitebar.scss
+++ b/assets/css/element/_sitebar.scss
@@ -1,13 +1,16 @@
 .umana-sitebar {
   padding-right: 20px;
   position: relative;
-  width: 350px;
   max-width: 350px;
   margin-bottom: 20px;
-  position: sticky;
-  top: 100px;
   font-size: 12px !important;
+  width: 100%;
   @include bp(xmedium) {
+    width: 300px;
+    font-size: 14px !important;
+  }
+  @include bp(large) {
+    width: 350px;
     font-size: 14px !important;
   }
   &.theme-orange {
