--- a/assets/css/shared/structure.scss
+++ b/assets/css/shared/structure.scss
@@ -478,3 +478,12 @@
     }
   }
 }
+
+.ant-badge {
+  .anticon.anticon-check-circle {
+    border-radius: 50% !important;
+    svg {
+      fill: $color-white !important;
+    }
+  }
+}
