--- a/assets/css/element/_form.scss
+++ b/assets/css/element/_form.scss
@@ -53,6 +53,18 @@ form.ant-form.ant-form-horizontal {
   flex-wrap: wrap;
   justify-content: space-between;
   font-family: $font-primary;
+  position: relative;
+
+  .form--overlay.active {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: fade-out(#fff, .4);
+    top: 0;
+    left: 0;
+    z-index: 88;
+  }
+
   .ant-form-item {
     width: 100%;
     display: flex;
